WP-8795 Fix to the extra space on the hover when nav gets stuck.

--- a/css/style.css
+++ b/css/style.css
@@ -4698,7 +4698,7 @@ div.gsb-full-bleed-page .main-middle .narrow-view .pane-bundle-video {
 .js #navigation, #navigation.search-closed {
   min-width: 702px;
   float: right;
-  padding: 30px 0;
+  padding: 30px 0 0;
 }
 @media (min-width: 14.375em) and (max-width: 74.9375em) {
   .js #navigation, #navigation.search-closed {
@@ -8982,6 +8982,7 @@ input.signup-submit:hover {
     right: 0;
     top: 0;
     z-index: 99;
+    height: 87px;
   }
 }
 
@@ -8997,7 +8998,7 @@ input.signup-submit:hover {
 }
 @media (min-width: 75em) {
   div#header-wrapper.awemenu-sticky + #content-wrapper {
-    margin-top: 85px;
+    margin-top: 76px;
     position: relative;
   }
 }
