--- a/sass/partials/design/_design.sass
+++ b/sass/partials/design/_design.sass
@@ -84,7 +84,7 @@
   &.search-closed
     min-width: 702px
     float: right
-    padding: 30px 0
+    padding: 30px 0 0
     +breakpoint($bp-for-phone-tablet-range)
       min-width: auto
     +breakpoint($bp-for-phone-only)
