--- a/sass/partials/design/_md-megamenu-main.sass
+++ b/sass/partials/design/_md-megamenu-main.sass
@@ -249,6 +249,7 @@
     right: 0
     top: 0
     z-index: 99
+    height: 87px
 div#header-wrapper.awemenu-sticky + #content-wrapper
   .page-seed &
     +breakpoint($bp-for-desktop-up)
@@ -257,7 +258,7 @@ div#header-wrapper.awemenu-sticky + #content-wrapper
     +breakpoint($bp-for-desktop-up)
       margin-top: 81px
   +breakpoint($bp-for-desktop-up)
-    margin-top: 85px
+    margin-top: 76px
     position: relative
 div#header-wrapper.awemenu-sticky + div#hero
   +breakpoint($bp-for-desktop-up)
